# OManifold

./: .gitmodules  CHANGES.md  OManifold.opam  README.md  dune-project  index.html
.github/workflows/: deploy-doc.yml
OManifold/: index.html
OManifold/C/: index.html
OManifold/C/Funcs/: index.html
OManifold/Libmanifoldc__c_generated_functions__Manifold_c_function_descriptions__Funcs/: index.html
OManifold/Libmanifoldc__c_generated_types/: index.html
OManifold/Libmanifoldc__function_gen__Manifold_c_function_descriptions__Funcs/: index.html
OManifold/Libmanifoldc__type_gen/: index.html
OManifold/Manifold_c_function_descriptions/: index.html
OManifold/Manifold_c_function_descriptions/Functions/: index.html
OManifold/Manifold_c_type_descriptions/: index.html
OManifold/Manifold_c_type_descriptions/Types/: index.html
OManifold/Manifold_c_type_descriptions/Types/BaryRef/: index.html
OManifold/Manifold_c_type_descriptions/Types/Box/: index.html
OManifold/Manifold_c_type_descriptions/Types/Components/: index.html
OManifold/Manifold_c_type_descriptions/Types/CrossSection/: index.html
OManifold/Manifold_c_type_descriptions/Types/CrossSectionVec/: index.html
OManifold/Manifold_c_type_descriptions/Types/Curvature/: index.html
OManifold/Manifold_c_type_descriptions/Types/CurvatureBounds/: index.html
OManifold/Manifold_c_type_descriptions/Types/ExportOptions/: index.html
OManifold/Manifold_c_type_descriptions/Types/FillRule/: index.html
OManifold/Manifold_c_type_descriptions/Types/IVec3/: index.html
OManifold/Manifold_c_type_descriptions/Types/JoinType/: index.html
OManifold/Manifold_c_type_descriptions/Types/Manifold/: index.html
OManifold/Manifold_c_type_descriptions/Types/ManifoldPair/: index.html
OManifold/Manifold_c_type_descriptions/Types/ManifoldVec/: index.html
OManifold/Manifold_c_type_descriptions/Types/Material/: index.html
OManifold/Manifold_c_type_descriptions/Types/Mesh/: index.html
OManifold/Manifold_c_type_descriptions/Types/MeshGL/: index.html
OManifold/Manifold_c_type_descriptions/Types/MeshRelation/: index.html
OManifold/Manifold_c_type_descriptions/Types/OpType/: index.html
OManifold/Manifold_c_type_descriptions/Types/PolyVert/: index.html
OManifold/Manifold_c_type_descriptions/Types/Polygons/: index.html
OManifold/Manifold_c_type_descriptions/Types/Properties/: index.html
OManifold/Manifold_c_type_descriptions/Types/Rect/: index.html
OManifold/Manifold_c_type_descriptions/Types/SimplePolygon/: index.html
OManifold/Manifold_c_type_descriptions/Types/Status/: index.html
OManifold/Manifold_c_type_descriptions/Types/Vec2/: index.html
OManifold/Manifold_c_type_descriptions/Types/Vec3/: index.html
OManifold/Manifold_c_type_descriptions/Types/Vec4/: index.html
OManifold/Manifold_c_types/: index.html
OManifold/Manifold_c_types/BaryRef/: index.html
OManifold/Manifold_c_types/Box/: index.html
OManifold/Manifold_c_types/Components/: index.html
OManifold/Manifold_c_types/CrossSection/: index.html
OManifold/Manifold_c_types/CrossSectionVec/: index.html
OManifold/Manifold_c_types/Curvature/: index.html
OManifold/Manifold_c_types/CurvatureBounds/: index.html
OManifold/Manifold_c_types/ExportOptions/: index.html
OManifold/Manifold_c_types/FillRule/: index.html
OManifold/Manifold_c_types/IVec3/: index.html
OManifold/Manifold_c_types/JoinType/: index.html
OManifold/Manifold_c_types/Manifold/: index.html
OManifold/Manifold_c_types/ManifoldPair/: index.html
OManifold/Manifold_c_types/ManifoldVec/: index.html
OManifold/Manifold_c_types/Material/: index.html
OManifold/Manifold_c_types/Mesh/: index.html
OManifold/Manifold_c_types/MeshGL/: index.html
OManifold/Manifold_c_types/MeshRelation/: index.html
OManifold/Manifold_c_types/OpType/: index.html
OManifold/Manifold_c_types/PolyVert/: index.html
OManifold/Manifold_c_types/Polygons/: index.html
OManifold/Manifold_c_types/Properties/: index.html
OManifold/Manifold_c_types/Rect/: index.html
OManifold/Manifold_c_types/SimplePolygon/: index.html
OManifold/Manifold_c_types/Status/: index.html
OManifold/Manifold_c_types/Vec2/: index.html
OManifold/Manifold_c_types/Vec3/: index.html
OManifold/Manifold_c_types/Vec4/: index.html
OManifold/OManifold/: index.html
OManifold/OManifold/Box/: index.html
OManifold/OManifold/Cross/: index.html
OManifold/OManifold/CrossSection/: index.html
OManifold/OManifold/Curvature/: index.html
OManifold/OManifold/Curvature/Bounds/: index.html
OManifold/OManifold/Export/: index.html
OManifold/OManifold/Export/Material/: index.html
OManifold/OManifold/Export/Opts/: index.html
OManifold/OManifold/MBox/: index.html
OManifold/OManifold/MMesh/: index.html
OManifold/OManifold/MMeshGL/: index.html
OManifold/OManifold/MRect/: index.html
OManifold/OManifold/Manifold/: index.html
OManifold/OManifold/Manifold/Curvature/: index.html
OManifold/OManifold/Manifold/Curvature/Bounds/: index.html
OManifold/OManifold/Manifold/Id/: index.html
OManifold/OManifold/MeshRelation/: index.html
OManifold/OManifold/MeshRelation/BaryRef/: index.html
OManifold/OManifold/Polygons/: index.html
OManifold/OManifold/Polygons/Simple/: index.html
OManifold/OManifold/Quality/: index.html
OManifold/OManifold/Sdf2/: index.html
OManifold/OManifold/Sdf3/: index.html
c/: dune  generate_c_functions.ml  generate_ml_functions.ml  generate_types_start.ml  helpers.c  manifold_c_function_descriptions.ml  manifold_c_type_descriptions.ml  manifold_c_types.ml
c/config/: discover.ml  dune
docs/: dune  index.mld
examples/: cross_extrusion.ml  dune  hulling.ml  morphs.ml  sdf_mesh.ml  sweep.ml
examples/helpers/: dune  runner.ml
lib/: OManifold.ml  OManifold.mli  baryRef.ml  bounds_intf.ml  box.ml  c.ml  conv.ml  crossSection.ml  curvature.ml  curvatureBounds.ml  dune  export.ml  fillRule.ml  joinType.ml  mBox.ml  mMesh.ml  mMeshGL.ml  mRect.ml  manifold.ml  mem.ml  meshRelation.ml  opType.ml  polyVert.ml  polygons.ml  quality.ml  sdf.ml  sdf2.ml  sdf3.ml  util.ml
test/: dune  manifold_test.ml
