(data_only_dirs vendor)

(library
 (name OManifold_c)
 (public_name OManifold.c)
 (wrapped false)
 (libraries ctypes)
 (flags
  (:standard -w -9-16-27))
 (ctypes
  (build_flags_resolver
   (vendored
    ; HACK: multiple -I directives to work around cc commands being
    ; run from different relative directories.
    ; https://github.com/ocaml/dune/issues/5325
    (c_flags
     "-Ic/vendor/manifold/bindings/c/include"
     "-Ivendor/manifold/bindings/c/include"
     "-Ic/vendor/manifold/bindings/c/include/manifold"
     "-Ivendor/manifold/bindings/c/include/manifold"
     "-DMANIFOLD_EXPORT=ON"
     (:include config/c_flags.sexp))
    (c_library_flags
     (:include config/c_library_flags.sexp)
     "-lClipper2")))
  (headers
   (include "manifold/manifoldc.h" "manifold/types.h"))
  (external_library_name libmanifoldc)
  (type_description
   (instance Types)
   (functor Manifold_c_type_descriptions))
  (function_description
   (concurrency sequential)
   (instance Funcs)
   (functor Manifold_c_function_descriptions))
  (generated_types Manifold_c_types)
  (generated_entry_point C))
 (foreign_archives manifoldc manifold))

; Build Manifold vendor

(rule
 (targets dllmanifoldc%{ext_dll} dllmanifold%{ext_dll})
 (deps
  (source_tree vendor/manifold))
 (action
  (no-infer
   (progn
    (with-outputs-to
     cmake_shared.log
     (chdir
      vendor/manifold/build_so
      (progn
       (run
        cmake
        -DCMAKE_BUILD_TYPE=Release
        -DBUILD_SHARED_LIBS=ON
        -DMANIFOLD_PAR=%{read:config/par_flag}
        -DMANIFOLD_CROSS_SECTION=ON
        -DMANIFOLD_EXPORT=ON
        -DMANIFOLD_CBIND=ON
        -DMANIFOLD_PYBIND=OFF
        -DMANIFOLD_JSBIND=OFF
        -DMANIFOLD_TEST=OFF
        -DMANIFOLD_USE_BUILTIN_CLIPPER2=ON
        ..)
       (run make -j))))
    (copy
     vendor/manifold/build_so/bindings/c/libmanifoldc%{ext_dll}
     dllmanifoldc%{ext_dll})
    (copy
     vendor/manifold/build_so/src/libmanifold%{ext_dll}
     dllmanifold%{ext_dll})))))

(rule
 (targets libmanifoldc.a libmanifold.a)
 (deps
  (source_tree vendor/manifold))
 (action
  (no-infer
   (progn
    (with-outputs-to
     cmake_static.log
     (chdir
      vendor/manifold/build_a
      (progn
       (run
        cmake
        -DCMAKE_BUILD_TYPE=Release
        -DBUILD_SHARED_LIBS=OFF
        -DMANIFOLD_PAR=%{read:config/par_flag}
        -DMANIFOLD_CROSS_SECTION=ON
        -DMANIFOLD_EXPORT=ON
        -DMANIFOLD_CBIND=ON
        -DMANIFOLD_PYBIND=OFF
        -DMANIFOLD_JSBIND=OFF
        -DMANIFOLD_TEST=OFF
        -DMANIFOLD_USE_BUILTIN_CLIPPER2=ON
        ..)
       (run make -j))))
    (copy vendor/manifold/build_a/bindings/c/libmanifoldc.a libmanifoldc.a)
    (copy vendor/manifold/build_a/src/libmanifold.a libmanifold.a)))))
