(executables
 (names sdf_mesh hulling sweep morphs cross_extrusion)
 (libraries OCADml OManifold))

(rule
 (alias examples)
 (deps
  (:runner "helpers/runner.exe")
  (:models
   (glob_files "*.exe")))
 (targets
  (dir "models"))
 (mode promote)
 (action
  (chdir
   "models"
   (run %{runner} %{models}))))
